--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,7 @@
 include:
   - board: nice_nano_v2
     shield: node_left
+    snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: node_right
   - board: nice_nano_v2
